<resources>
    <string name="app_name">Nabu</string>
    <string name="fragment_myday_name">My Day</string>
    <string name="fragment_social_name">Social</string>
    <string name="fragment_habits_name">Habits</string>
    <string name="fragment_settings_name">Settings</string>
    <string name="icon_account_label">Account</string>
    <string name="label_logged_in_as">Signed in as:</string>
    <string name="label_log_out">Sign out</string>
    <string name="label_reset">Reset user data</string>
    <string name="button_cancel">@android:string/cancel</string>
    <string name="button_sign_out">Sign out</string>
    <string name="button_reset">Reset</string>
    <string name="button_add">Add</string>
    <string name="button_edit_event">Edit Event</string>
    <string name="dialog_sign_out_message">Are you sure you want to sign out?</string>
    <string name="dialog_reset_message">Are you sure you want to reset all user data?</string>
    <string name="prompt_habit_completed">Habit marked as complete.</string>
    <string name="hint_date_completed">Date Completed</string>
    <string name="hint_comment">Comment</string>
    <string name="title_edit_event">Modify Event</string>
    <string name="title_edit_habit">Modify Habit</string>
    <string name="error_comment_too_long">Comment can only have up to 20 characters.</string>
    <string name="error_title_empty">Title cannot be empty.</string>
    <string name="error_title_too_long">Title can only have up to 20 characters.</string>
    <string name="error_reason_empty">Reason cannot be empty.</string>
    <string name="error_reason_too_long">Reason can only have up to 30 characters.</string>
    <string name="error_start_date_empty">Start date cannot be empty</string>
    <string name="menu_view_events">View Events</string>
    <string name="menu_edit_habit">Edit Habit</string>
    <string name="menu_delete_habit">Delete Habit</string>
    <string name="menu_add_habit">Add Habit</string>
    <string name="hint_habit_title">Habit Title</string>
    <string name="button_on_sunday_toggle">Sun</string>
    <string name="button_on_monday_toggle">Mon</string>
    <string name="button_on_tuesday_toggle">Tue</string>
    <string name="button_on_wednesday_toggle">Wed</string>
    <string name="button_on_thursday_toggle">Thu</string>
    <string name="button_on_friday_toggle">Fri</string>
    <string name="button_on_saturday_toggle">Sat</string>
    <string name="hint_reason">Reason</string>
    <string name="hint_is_public">Public</string>
    <string name="hint_start_date">Start Date</string>
    <string name="menu_hide_events">Hide Events</string>
    <string name="menu_edit_event">Edit Event</string>
    <string name="menu_delete_event">Delete Event</string>
    <string name="dialog_delete_habit_message">Are you sure you want to delete this habit?\n\nThis will also delete all associated events.</string>
    <string name="dialog_delete_event_message">Are you sure you want to delete this event?</string>
    <string name="button_delete">Delete</string>
    <string name="hint_location">Location</string>
    <string name="error_date_empty">Date cannot be empty</string>
    <string name="title_send_follow_request">Send Follow Request</string>
    <string name="hint_email">Email</string>
    <string name="error_email_empty">Email cannot be empty</string>
</resources>