<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialogs.edit_habit.EditHabitFragment">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="SpeakableTextPresentCheck">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_title"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_habit_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/switch_shared"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_shared"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_is_public"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="0.4"
                    app:layout_constraintStart_toEndOf="@+id/layout_title"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_occurrence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_title">
                <ToggleButton
                    android:id="@+id/button_on_sunday"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/occurrence_toggle_button"
                    android:textColor="@drawable/occurrence_toggle_button_text_colour"
                    android:textOff="@string/button_on_sunday_toggle"
                    android:textOn="@string/button_on_sunday_toggle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />
                <ToggleButton
                    android:id="@+id/button_on_monday"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/occurrence_toggle_button"
                    android:textColor="@drawable/occurrence_toggle_button_text_colour"
                    android:textOff="@string/button_on_monday_toggle"
                    android:textOn="@string/button_on_monday_toggle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_on_tuesday"
                    app:layout_constraintStart_toEndOf="@+id/button_on_sunday"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />
                <ToggleButton
                    android:id="@+id/button_on_tuesday"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/occurrence_toggle_button"
                    android:textColor="@drawable/occurrence_toggle_button_text_colour"
                    android:textOff="@string/button_on_tuesday_toggle"
                    android:textOn="@string/button_on_tuesday_toggle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_on_wednesday"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/button_on_monday"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />
                <ToggleButton
                    android:id="@+id/button_on_wednesday"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/occurrence_toggle_button"
                    android:textColor="@drawable/occurrence_toggle_button_text_colour"
                    android:textOff="@string/button_on_wednesday_toggle"
                    android:textOn="@string/button_on_wednesday_toggle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_on_thursday"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/button_on_tuesday"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />
                <ToggleButton
                    android:id="@+id/button_on_thursday"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/occurrence_toggle_button"
                    android:textColor="@drawable/occurrence_toggle_button_text_colour"
                    android:textOff="@string/button_on_thursday_toggle"
                    android:textOn="@string/button_on_thursday_toggle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_on_friday"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/button_on_wednesday"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />
                <ToggleButton
                    android:id="@+id/button_on_friday"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/occurrence_toggle_button"
                    android:textColor="@drawable/occurrence_toggle_button_text_colour"
                    android:textOff="@string/button_on_friday_toggle"
                    android:textOn="@string/button_on_friday_toggle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_on_saturday"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/button_on_thursday"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />
                <ToggleButton
                    android:id="@+id/button_on_saturday"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/occurrence_toggle_button"
                    android:textColor="@drawable/occurrence_toggle_button_text_colour"
                    android:textOff="@string/button_on_saturday_toggle"
                    android:textOn="@string/button_on_saturday_toggle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_occurrence">
                <ImageView
                    android:id="@+id/icon_reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_notes_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_reason"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/hint_reason"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icon_reason"
                    app:layout_constraintTop_toTopOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_reason"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_reason">
                <ImageView
                    android:id="@+id/icon_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_outline_event_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_start_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icon_start_date"
                    app:layout_constraintTop_toTopOf="parent">
                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/text_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_start_date"
                        android:inputType="none"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_outline_save_24"
        app:tint="@color/white"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
